<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, Main!</string>
    <string name="app_name">Binaural Beats Therapy</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="help">Help</string>
    <string name="create">Create</string>
    <string name="setup">Setup</string>
    <string name="start">Start</string>
    <string name="cancel">Cancel</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="ok">Ok</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm_reset">Stop program and go back to Setup screen?</string>

    <string name="getting_involved">Want to get Involved?</string>
    <string name="getting_involved_dialog">This application is free and open source, anyone can participate and make it better.\n\n
    I am looking for people to help on graphics, sounds, tone presets, documentation, video tutorial, ideas etc... as well as developers too!\n\n
    Send me an email to introduce yourself and we can get started,</string>
    <string name="share">Share</string>
    <string name="share_text">Type your message here</string>
    <string name="close">Close</string>
    <string name="contact">Contact</string>
    <string name="blog">Blog</string>
    <string name="rate_on_market">Rate on market</string>
    <string name="donate">Donate</string>
    <string name="preset_builder">Preset Builder</string>
    <string name="history">History</string>
    <string name="donate_text">This application is free and will stay free.\n\n
        Developing Binaural Beat Therapy,
        researching and staying up to date on binaural beats and mind science takes time and a lot of efforts.\n\n
        Donating will help me spend more time on Binaural Beat Therapy and continue delivering updates and answering requests!\n\n
        Thanks for your help!\n
        Giorgio Regni</string>

    <string name="voices">Voices</string>
    <string name="background">Background</string>
    <string name="volume">Volume</string>

    <string name="welcome_text">Welcome to Binaural Beats Therapy! This app is free and open source, have fun and join the community! 
    Headphones and a safe environment are required.</string>

    <string name="source">Source</string>
    <string name="forum">Forum</string>
    <string name="like">Like</string>
    <string name="share_facebook">Share on Facebook</string>
    <string name="jointhecommunity">Join the community!</string>

    <string name="notif_started">Binaural Beats</string>
    <string name="notif_descr" formatted="false">%s in progress</string>

    <string name="info_timing" formatted="false">Main Beat %.2fHz - %s:%s/</string>
    <string name="time_format" formatted="false">%s:%s</string>
    <string name="time_format_min_sec" formatted="false">%sm%s</string>

    <string name="comments_title">Comments</string>
    <string name="menu">Menu</string>
    <string name="stop_program">Stop program</string>
    <string name="toggle_graphics">Graphics on/off</string>
    <string name="graphics_on">Graphics on</string>
    <string name="graphics_off">Graphics off, screen will turn off automatically</string>

    <string name="group_oobe">Out of body experience</string>


    <string name="program_self_hypnosis">Self Hypnosis</string>
    <string name="program_highest_mental_activity">Highest mental activity</string>
    <string name="program_unity">Unity</string>
    <string name="program_morphine">Morphine pain killer</string>
    <string name="program_learning">Study and learning</string>
    <string name="program_creativity">Creativity</string>
    <string name="program_schumann_resonance">Schumann Resonance</string>
    <string name="program_astral_01_relax">Astral projection - Relaxation</string>
    <string name="program_hallucination">Hallucination</string>
    <string name="program_sleep_induction">Sleep induction</string>
    <string name="program_lucid_dreams">Lucid dreams</string>
    <string name="program_lucid_dreams_2">Lucid dreams - variant</string>

    <string name="program_wakefulrelax">Wakeful Relaxation</string>
    <string name="program_shamanic_rhythm">Shamanic rhythm</string>
    <string name="program_smr">Insomnia Relief</string>
    <string name="program_powernap">Power Nap</string>
    <string name="program_airplanetravelaid">Airplane travel aid</string>
    <string name="program_oobe">Out Of Body Experience</string>
    <string name="program_hgh">Human Growth Hormone</string>
    <string name="program_adhd">ADHD</string>
    <string name="program_hiit">High Intensity Interval Training</string>
    <string name="program_euphoria">Euphoria induction</string>


    <string name="facebook_app_id">117055728638150</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="community">Community</string>
    <string name="user_guide">User Guide</string>
    <string name="user_community">User Community</string>
    <string name="welcome">Welcome</string>
    <string name="tutorial_1_text">Binaural Beats Therapy is a free and open source mobile app!</string>
    <string name="tutorial_2_title">Binaural beats?</string>
    <string name="tutorial_2_text">Binaural beats are specific audio frequency sent through headphones to stimulate your brain.</string>
    <string name="tutorial_3_title">How?</string>
    <string name="tutorial_3_text">They produce subtle changes in behavior through entrainment of brainwaves frequency.</string>
    <string name="tutorial_4_title">Why?</string>
    <string name="tutorial_4_text">They can help quit an addiction, concentrate better, go to sleep faster, ...</string>
    <string name="tutorial_5_title">Getting started</string>
    <string name="tutorial_5_text">Wear Headphones, select one of builtin presets and relax!</string>
    <string name="tutorial_6_title">Safety</string>
    <string name="tutorial_6_text">Please make sure you are in a safe &amp; relaxed environment.</string>
    <string name="tutorial_start">Start</string>
    <string name="like_facebook">Like on Facebook</string>
    <string name="dialog_donate_thank">Thank you for your help, it\'s greatly appreciated.</string>
    <string name="dialog_donation_title">Please pick a donation level</string>
    <string name="don_10_level">Supporter</string>
    <string name="don_50_level">Ambassador</string>
    <string name="don_100_level">Spiritual Leader</string>
    <string name="DONATION_USER_CANCELED">User canceled</string>
    <string name="DONATION_ALREADY_OWNED">Already donated at that level, thank you!</string>
    <string name="DONATION_OTHER_ERROR">Donation error, please try again later</string>
    <string name="DONATION_CONNECTION_ERROR">Could\'t connect to Google Play Store</string>

    <string name="title_activity_history">History</string>
    <string name="program_name">Program Name : </string>
    <string name="date_history">Date : </string>
    <string name="total_time">Total Time : </string>
    <string name="no_history_data">No History Data Available</string>

    <string name="name_of_preset">Name of preset</string>
    <string name="description_of_preset">Description of preset</string>
    <string name="author_of_preset">Author of preset</string>
    <string name="add_period">Add Period</string>
    <string name="preset_name">Preset Name</string>
    <string name="duration">Duration</string>
    <string name="background_volume">Background Volume</string>
    <string name="freq_start">Frequency Start</string>
    <string name="freq_end">Frequency End</string>
    <string name="add">Add</string>
    <string name="note">Note</string>
    <string name="period">Period</string>
    <string name="save">Save</string>
    <string name="duration_error">Please set duration greater than 00:00 seconds</string>
    <string name="start_freq_error">Please set start frequency</string>
    <string name="end_freq_error">Please set end frequency</string>
    <string name="note_error">Please set note frequency</string>
    <string name="name_error">Please enter name of preset</string>
    <string name="create_preset">Create Preset - </string>
    <string name="add_bbv">Add Binaural Beat Voice</string>
    <string name="voice">Voice</string>
    <string name="soundloop">SoundLoop</string>
    <string name="visualizer">Visualizer</string>
    <string name="done">Done</string>
    <string name="preset_error">Please add alteast one period</string>
    <string name="description_error">Please enter description</string>
    <string name="author_error">Please enter author</string>
    <string name="preset_saved">Preset Saved Sucessfully!</string>
    <string name="preset_list">Preset List</string>
    <string name="preset">Preset</string>
    <string name="name">Name</string>
    <string name="author">Author</string>
    <string name="description">Description</string>
    <string name="no_presets_created">No Presets Created</string>
    <string name="add_voice">Add Voice</string>
    <string name="custom_preset">Custom Preset</string>
    <string name="are_you_sure_delete">Are you sure want to delete  %s?</string>
    <string name="add_voice_error">Please add atleast one voice per period</string>
</resources>
