<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/presetLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <ExpandableListView
        android:id="@+id/presetListView"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:background="@null"
        android:cacheColorHint="#00000000"
        android:scrollbars="vertical"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/donateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="1dip"
            android:drawableLeft="@drawable/logo_small"
            android:drawableStart="@drawable/logo_small"
            android:drawablePadding="4dip"
            android:text="@string/donate" />

        <Button
            android:id="@+id/likeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="1dip"
            android:drawableLeft="@drawable/facebooksmall"
            android:drawableStart="@drawable/facebooksmall"
            android:drawablePadding="4dip"
            android:text="@string/like" />

        <TextView
            android:id="@+id/jointhecommunityText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="10"
            android:text="@string/jointhecommunity" />
    </LinearLayout>
</LinearLayout>